--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "mail2pdf-docker",
-    "version": "0.2.0",
+    "version": "1.0.0",
     "description": "Render emails stored as .eml files to PDF.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
-    "author": "Benjamin Altpeter <hi@bn.al>",
-    "repository": "https://github.com/baltpeter/mail2pdf",
+    "author": "Nazim <nazim27294@gmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/nshiddqui/mail2pdf-docker.git"
+    },
     "license": "MIT",
     "devDependencies": {
         "@types/mailparser": "^3.0.2",
